# PowerVR

./: README.md
Intro_Mobile_Graphics/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
Intro_Mobile_Graphics/OpenGLES/: CMakeLists.txt  Makefile  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/01_IntroducingPVRShell/: CMakeLists.txt  Makefile  OpenGLESIntroducingPVRShell.cpp  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/01_IntroducingPVRShell_EX1_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESIntroducingPVRShell.cpp  Triangle.cpp  Triangle.h  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/01_IntroducingPVRShell_EX2_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESIntroducingPVRShell.cpp  Triangle.cpp  Triangle.h  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/01_IntroducingPVRShell_EX3_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESIntroducingPVRShell.cpp  Triangle.cpp  Triangle.h  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/02_IntroducingPVRUtils/: Makefile  OpenGLESIntroducingPVRUtils.cpp  Triangle.cpp  Triangle.h  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/02_IntroducingPVRUtils/build-android/: build.gradle  settings.gradle
Intro_Mobile_Graphics/OpenGLES/02_IntroducingPVRUtils_EX1_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESIntroducingPVRUtils.cpp  Triangle.cpp  Triangle.h  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/02_IntroducingPVRUtils_EX2_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESIntroducingPVRUtils.cpp  Triangle.h  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/03_2D_Texturing/: CMakeLists.txt  Makefile  OpenGLESIntroducingPVRUtils.cpp  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/03_2D_Texturing/build-android/: build.gradle  settings.gradle
Intro_Mobile_Graphics/OpenGLES/03_2D_Texturing_EX1_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESIntroducingPVRUtils.cpp  Square.cpp  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/03_2D_Texturing_EX1_COMPLETED/cmake-resources/: Resources.rc
Intro_Mobile_Graphics/OpenGLES/03_2D_Texturing_EX2_COMPLETED/: CMakeLists.txt  Makefile  Triangle.cpp  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/03_2D_Texturing_EX3-4_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESIntroducingPVRUtils.cpp  Square.cpp  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/03_2D_Texturing_EX3-4_COMPLETED/cmake-resources/: Resources.rc
Intro_Mobile_Graphics/OpenGLES/03_2D_Texturing_EX5_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESIntroducingPVRUtils.cpp  Square.h  Star-32bpp.pvr  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/03_2D_Texturing_EX5_COMPLETED/cmake-resources/: Resources.rc
Intro_Mobile_Graphics/OpenGLES/04_SimpleLighting/: CMakeLists.txt  Makefile  OpenGLESSimpleLighting.cpp  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/04_SimpleLighting/build-android/: build.gradle  settings.gradle
Intro_Mobile_Graphics/OpenGLES/04_SimpleLighting/sdk/: Makefile  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/04_SimpleLighting_EX1_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESSimpleLighting.cpp  Triangle.cpp  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/04_SimpleLighting_EX1_COMPLETED/cmake-resources/: Resources.rc
Intro_Mobile_Graphics/OpenGLES/04_SimpleLighting_EX2_COMPLETED/: CMakeLists.txt  Makefile  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/04_SimpleLighting_EX4_COMPLETED/: CMakeLists.txt  Makefile  Triangle.h  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/04_SimpleLighting_EX5_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESSimpleLighting.cpp  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/04_SimpleLighting_EX6_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESSimpleLighting.cpp  Triangle.cpp  Triangle.h  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/05_PointLighting/: CMakeLists.txt  FragShader.fsh  Makefile  Triangle.cpp  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/05_PointLighting/build-android/: build.gradle  settings.gradle
Intro_Mobile_Graphics/OpenGLES/05_PointLighting_EX1_COMPLETED/: CMakeLists.txt  Makefile  Triangle.h  VertShader.vsh  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/05_PointLighting_EX1_COMPLETED/build-android/: build.gradle  settings.gradle
Intro_Mobile_Graphics/OpenGLES/05_PointLighting_EX2_COMPLETED/: CMakeLists.txt  FragShader.fsh  Makefile  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/05_PointLighting_EX2_COMPLETED/build-android/: build.gradle  gradle.properties  settings.gradle
Intro_Mobile_Graphics/OpenGLES/05_PointLighting_EX3_COMPLETED/: CMakeLists.txt  Makefile  OpenGLESPointLighting.cpp  VertShader.vsh  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/05_PointLighting_EX3_COMPLETED/build-android/: build.gradle  settings.gradle
Intro_Mobile_Graphics/OpenGLES/06_Reflection_Refraction/: CMakeLists.txt  FragShader.fsh  Makefile  ReflectionRefraction.cpp  VertShader.vsh  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/06_Reflection_Refraction/build-android/: build.gradle  settings.gradle
Intro_Mobile_Graphics/OpenGLES/06_Reflection_Refraction_EX1_COMPLETED/: CMakeLists.txt  FragShader.fsh  Makefile  VertShader.vsh  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/06_Reflection_Refraction_EX1_COMPLETED/build-android/: build.gradle  settings.gradle
Intro_Mobile_Graphics/OpenGLES/06_Reflection_Refraction_EX2_COMPLETED/: CMakeLists.txt  Cubemap.pvr  FragShader.fsh  Makefile  Triangle.cpp  Triangle.h  VertShader.vsh  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/06_Reflection_Refraction_EX2_COMPLETED/build-android/: Android_Compile_Debug.bat  build.gradle  settings.gradle
Intro_Mobile_Graphics/OpenGLES/06_Reflection_Refraction_EX3_COMPLETED/: CMakeLists.txt  Makefile  ReflectionRefraction.cpp  cmake_install.cmake
Intro_Mobile_Graphics/OpenGLES/06_Reflection_Refraction_EX4_COMPLETED/: CMakeLists.txt  Makefile  Square.cpp  Square.h  Triangle.cpp  cmake_install.cmake
Intro_Mobile_Graphics/sdk/: Makefile  cmake_install.cmake
Intro_Mobile_Graphics/sdk/framework/: Makefile  cmake_install.cmake
(+72 files in other folders)
